--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body class="index-body">
 	<header class="main-header">
 		<nav class="main-navigation">
-			<img class="main-logo" src="" alt="">
-			<form class="search-form" action="">
+			<img class="main-logo" src="img/index-logo.png" width="110" height="43" alt="Main logo">
+			<form class="search-form" method="GET">
 				<input class="main-search" type="search" name="search" id="search">
 			</form>
 			<span class="price-in-cart">300</span>
@@ -31,31 +31,31 @@
 			<h2 class="visually-hidden">Promo</h2>
 			<section class="promo-slider-slide">
 				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
-				<img src="" alt="" class="promo-slider-slide-img">
+				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
 				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
 				<a href="#" class="button promo-slider-slide-button">Shop now</a>
 			</section>
 			<section class="promo-slider-slide">
 				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
-				<img src="" alt="" class="promo-slider-slide-img">
+				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
 				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
 				<a href="#" class="button promo-slider-slide-button">Shop now</a>
 			</section>
 			<section class="promo-slider-slide">
 				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
-				<img src="" alt="" class="promo-slider-slide-img">
+				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
 				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
 				<a href="#" class="button promo-slider-slide-button">Shop now</a>
 			</section>
 			<section class="promo-slider-slide">
 				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
-				<img src="" alt="" class="promo-slider-slide-img">
+				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
 				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
 				<a href="#" class="button promo-slider-slide-button">Shop now</a>
 			</section>
 			<section class="promo-slider-slide">
 				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
-				<img src="" alt="" class="promo-slider-slide-img">
+				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
 				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
 				<a href="#" class="button promo-slider-slide-button">Shop now</a>
 			</section>
@@ -65,17 +65,17 @@
 			<ul class="promo-shop-slides">
 				<li class="promo-shop-slide">
 					<h3 class="promo-shop-slide-title">Branded Shoes</h3>
-					<img src="" alt="" class="promo-shop-slide-img">
+					<img src="img/shoes-slide.jpg" width="180" height="150" alt="Brown Shoes" class="promo-shop-slide-img">
 					<a href="#" class="button promo-shop-slide-button">Shop</a>
 				</li>
 				<li class="promo-shop-slide">
 					<h3 class="promo-shop-slide-title">Branded Tshirts</h3>
-					<img src="" alt="" class="promo-shop-slide-img">
+					<img src="img/T-shirt-slide.jpg" width="180" height="150" alt="Grey T-Shirt" class="promo-shop-slide-img">
 					<a href="#" class="button promo-shop-slide-button">Shop</a>
 				</li>
 				<li class="promo-shop-slide">
 					<h3 class="promo-shop-slide-title">Branded Cargos</h3>
-					<img src="" alt="" class="promo-shop-slide-img">
+					<img src="img/cargo-slide.jpg" width="180" height="150" alt="Cargo Promo" class="promo-shop-slide-img">
 					<a href="#" class="button promo-shop-slide-button">Shop</a>
 				</li>
 			</ul>
@@ -84,37 +84,37 @@
 			<h2 class="products-main-title">Featured Products</h2>
 			<ul class="products-list">
 				<li class="products-item">
-					<img src="" alt="" class="products-item-img">
+					<img src="img/products-shoes.jpg" width="190" height="130" alt="Red shoes" class="products-item-img">
 					<h3 class="products-item-title">Branded Shoes</h3>
 					<span class="products-item-price">300</span>
 					<a href="#" class="button products-item-button">Buy Now</a>
 				</li>
 				<li class="products-item">
-					<img src="" alt="" class="products-item-img">
+					<img src="img/products-tees.jpg" width="190" height="130" alt="Levi's Tee" class="products-item-img">
 					<h3 class="products-item-title">Branded Tees</h3>
 					<span class="products-item-price">300</span>
 					<a href="#" class="button products-item-button">Buy Now</a>
 				</li>
 				<li class="products-item">
-					<img src="" alt="" class="products-item-img">
+					<img src="img/products-tshirts.jpg" width="190" height="130" alt="Grey T-Shirt" class="products-item-img">
 					<h3 class="products-item-title">Branded Tshirts</h3>
 					<span class="products-item-price">300</span>
 					<a href="#" class="button products-item-button">Buy Now</a>
 				</li>
 				<li class="products-item">
-					<img src="" alt="" class="products-item-img">
+					<img src="img/products-purses.jpg" width="190" height="130" alt="Black Purse" class="products-item-img">
 					<h3 class="products-item-title">Branded Purse</h3>
 					<span class="products-item-price">300</span>
 					<a href="#" class="button products-item-button">Buy Now</a>
 				</li>
 				<li class="products-item">
-					<img src="" alt="" class="products-item-img">
+					<img src="img/products-bags.jpg" width="190" height="130" alt="White Woman Bag" class="products-item-img">
 					<h3 class="products-item-title">Ems Women Bag</h3>
 					<span class="products-item-price">300</span>
 					<a href="#" class="button products-item-button">Buy Now</a>
 				</li>
 				<li class="products-item">
-					<img src="" alt="" class="products-item-img">
+					<img src="img/products-cargos.jpg" width="190" height="130" alt="Cargos" class="products-item-img">
 					<h3 class="products-item-title">Branded Cargos</h3>
 					<span class="products-item-price">300</span>
 					<a href="#" class="button products-item-button">Buy Now</a>
