--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Aditii Shop</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+	<link rel="stylesheet" href="css/style.css">	
 </head>
 <body class="index-body">
 	<header class="main-header">
