header and promo-slider

--- a/index.html
+++ b/index.html
@@ -9,57 +9,72 @@
 <body class="index-body">
 	<header class="main-header">
 		<nav class="main-navigation">
-			<img class="main-logo" src="img/index-logo.png" width="110" height="43" alt="Main logo">
-			<form class="search-form" method="GET">
-				<input class="main-search" type="search" name="search" id="search">
-			</form>
-			<span class="price-in-cart">300</span>
-			<ul class="site-navigation">
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Home</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Sale</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Handbags</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Wallets</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Accessories</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Mens Store</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Shoes</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Vintage</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Services</a></li>
-				<li class="site-navigation-item"><a href="#" class="site-navigation-link">Contact us</a></li>
-			</ul>
+			<div class="central-container">
+				<img class="main-logo" src="img/index-logo.png" width="110" height="43" alt="Main logo">
+				<form class="search-form" method="GET">
+					<input class="main-search" type="search" name="search" id="search">
+					<button class="search-button" type="submit"></button>
+				</form>
+				<span class="price-in-cart">&#36;300</span>
+			</div>
+			<div class="site-navigation-bg">
+				<ul class="site-navigation">
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Home</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Sale</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Handbags</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Wallets</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Accessories</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Mens Store</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Shoes</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Vintage</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Services</a></li>
+					<li class="site-navigation-item"><a href="#" class="site-navigation-link">Contact us</a></li>
+				</ul>
+			</div>
 		</nav>
 	</header>
 	<main class="index-main">
 		<div class="promo-slider-container">
 			<h2 class="visually-hidden">Promo</h2>
-			<section class="promo-slider-slide">
-				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
+			<section class="promo-slider-slide show-promo-slide">
 				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
-				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
-				<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				<div class="text-container-in-promo-slider">
+					<h3 class="promo-slider-slide-title">Cowhide<br>Standard Crew</h3>
+					<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
+					<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				</div>
 			</section>
 			<section class="promo-slider-slide">
-				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
 				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
-				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
-				<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				<div class="text-container-in-promo-slider">
+					<h3 class="promo-slider-slide-title">Cowhide<br>Standard Crew</h3>
+					<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
+					<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				</div>
 			</section>
 			<section class="promo-slider-slide">
-				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
 				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
-				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
-				<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				<div class="text-container-in-promo-slider">
+					<h3 class="promo-slider-slide-title">Cowhide<br>Standard Crew</h3>
+					<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
+					<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				</div>
 			</section>
 			<section class="promo-slider-slide">
-				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
 				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
-				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
-				<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				<div class="text-container-in-promo-slider">
+					<h3 class="promo-slider-slide-title">Cowhide<br>Standard Crew</h3>
+					<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
+					<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				</div>
 			</section>
 			<section class="promo-slider-slide">
-				<h3 class="promo-slider-slide-title">Cowhide Standard Crew</h3>
 				<img src="img/levis-T-Shirt.png" width="278" height="325" alt="Levi's T-Shirt" class="promo-slider-slide-img">
-				<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
-				<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				<div class="text-container-in-promo-slider">
+					<h3 class="promo-slider-slide-title">Cowhide<br>Standard Crew</h3>
+					<p class="promo-slider-slide-description">White coloured, short-sleeved, printed T-shirt for men by Levi's. This crew-neck T-shirt is made of organic cotton and comes in a regular fit.</p>
+					<a href="#" class="button promo-slider-slide-button">Shop now</a>
+				</div>
 			</section>
 		</div>
 		<div class="promo-shop-slider-container">
