--- a/index.html
+++ b/index.html
@@ -81,62 +81,72 @@
 			<h2 class="visually-hidden">Promo Shop</h2>
 			<ul class="promo-shop-slides">
 				<li class="promo-shop-slide">
-					<h3 class="promo-shop-slide-title">Branded Shoes</h3>
 					<img src="img/shoes-slide.jpg" width="180" height="150" alt="Brown Shoes" class="promo-shop-slide-img">
-					<a href="#" class="button promo-shop-slide-button">Shop</a>
+					<div class="promo-shop-text-container">
+						<h3 class="promo-shop-slide-title">Branded Shoes</h3>
+						<a href="#" class="button promo-shop-slide-button">Shop</a>
+					</div>
 				</li>
 				<li class="promo-shop-slide">
-					<h3 class="promo-shop-slide-title">Branded Tshirts</h3>
 					<img src="img/T-shirt-slide.jpg" width="180" height="150" alt="Grey T-Shirt" class="promo-shop-slide-img">
-					<a href="#" class="button promo-shop-slide-button">Shop</a>
+					<div class="promo-shop-text-container">
+						<h3 class="promo-shop-slide-title">Branded Tshirts</h3>
+						<a href="#" class="button promo-shop-slide-button">Shop</a>
+					</div>
 				</li>
 				<li class="promo-shop-slide">
-					<h3 class="promo-shop-slide-title">Branded Cargos</h3>
 					<img src="img/cargo-slide.jpg" width="180" height="150" alt="Cargo Promo" class="promo-shop-slide-img">
-					<a href="#" class="button promo-shop-slide-button">Shop</a>
+					<div class="promo-shop-text-container">
+						<h3 class="promo-shop-slide-title">Branded Cargos</h3>
+						<a href="#" class="button promo-shop-slide-button">Shop</a>
+					</div>
 				</li>
 			</ul>
 		</div>
 		<div class="products">
 			<h2 class="products-main-title">Featured Products</h2>
-			<ul class="products-list">
-				<li class="products-item">
-					<img src="img/products-shoes.jpg" width="190" height="130" alt="Red shoes" class="products-item-img">
-					<h3 class="products-item-title">Branded Shoes</h3>
-					<span class="products-item-price">300</span>
-					<a href="#" class="button products-item-button">Buy Now</a>
-				</li>
-				<li class="products-item">
-					<img src="img/products-tees.jpg" width="190" height="130" alt="Levi's Tee" class="products-item-img">
-					<h3 class="products-item-title">Branded Tees</h3>
-					<span class="products-item-price">300</span>
-					<a href="#" class="button products-item-button">Buy Now</a>
-				</li>
-				<li class="products-item">
-					<img src="img/products-tshirts.jpg" width="190" height="130" alt="Grey T-Shirt" class="products-item-img">
-					<h3 class="products-item-title">Branded Tshirts</h3>
-					<span class="products-item-price">300</span>
-					<a href="#" class="button products-item-button">Buy Now</a>
-				</li>
-				<li class="products-item">
-					<img src="img/products-purses.jpg" width="190" height="130" alt="Black Purse" class="products-item-img">
-					<h3 class="products-item-title">Branded Purse</h3>
-					<span class="products-item-price">300</span>
-					<a href="#" class="button products-item-button">Buy Now</a>
-				</li>
-				<li class="products-item">
-					<img src="img/products-bags.jpg" width="190" height="130" alt="White Woman Bag" class="products-item-img">
-					<h3 class="products-item-title">Ems Women Bag</h3>
-					<span class="products-item-price">300</span>
-					<a href="#" class="button products-item-button">Buy Now</a>
-				</li>
-				<li class="products-item">
-					<img src="img/products-cargos.jpg" width="190" height="130" alt="Cargos" class="products-item-img">
-					<h3 class="products-item-title">Branded Cargos</h3>
-					<span class="products-item-price">300</span>
-					<a href="#" class="button products-item-button">Buy Now</a>
-				</li>
-			</ul>
+			<div class="products-bg">
+				<div class="minus-margin">
+					<ul class="products-list">
+						<li class="products-item">
+							<img src="img/products-shoes.jpg" width="190" height="130" alt="Red shoes" class="products-item-img">
+							<h3 class="products-item-title">Branded Shoes</h3>
+							<span class="products-item-price">&#36;300</span>
+							<a href="#" class="button products-item-button">Buy Now</a>
+						</li>
+						<li class="products-item">
+							<img src="img/products-tees.jpg" width="190" height="130" alt="Levi's Tee" class="products-item-img">
+							<h3 class="products-item-title">Branded Tees</h3>
+							<span class="products-item-price">&#36;300</span>
+							<a href="#" class="button products-item-button">Buy Now</a>
+						</li>
+						<li class="products-item">
+							<img src="img/products-tshirts.jpg" width="190" height="130" alt="Grey T-Shirt" class="products-item-img">
+							<h3 class="products-item-title">Branded Tshirts</h3>
+							<span class="products-item-price">&#36;300</span>
+							<a href="#" class="button products-item-button">Buy Now</a>
+						</li>
+						<li class="products-item">
+							<img src="img/products-purses.jpg" width="190" height="130" alt="Black Purse" class="products-item-img">
+							<h3 class="products-item-title">Branded Purse</h3>
+							<span class="products-item-price">&#36;300</span>
+							<a href="#" class="button products-item-button">Buy Now</a>
+						</li>
+						<li class="products-item">
+							<img src="img/products-bags.jpg" width="190" height="130" alt="White Woman Bag" class="products-item-img">
+							<h3 class="products-item-title">Ems Women Bag</h3>
+							<span class="products-item-price">&#36;300</span>
+							<a href="#" class="button products-item-button">Buy Now</a>
+						</li>
+						<li class="products-item">
+							<img src="img/products-cargos.jpg" width="190" height="130" alt="Cargos" class="products-item-img">
+							<h3 class="products-item-title">Branded Cargos</h3>
+							<span class="products-item-price">&#36;300</span>
+							<a href="#" class="button products-item-button">Buy Now</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</main>
 	<footer class="main-footer">
