--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<input class="main-search" type="search" name="search" id="search">
 					<button class="search-button" type="submit"></button>
 				</form>
+				<a class="link-to-cart" href="#"><span class="visually-hidden">Перейти к корзине</span></a>
 				<span class="price-in-cart">&#36;300</span>
 			</div>
 			<div class="site-navigation-bg">
@@ -77,31 +78,33 @@
 				</div>
 			</section>
 		</div>
-		<div class="promo-shop-slider-container">
-			<h2 class="visually-hidden">Promo Shop</h2>
-			<ul class="promo-shop-slides">
-				<li class="promo-shop-slide">
-					<img src="img/shoes-slide.jpg" width="180" height="150" alt="Brown Shoes" class="promo-shop-slide-img">
-					<div class="promo-shop-text-container">
-						<h3 class="promo-shop-slide-title">Branded Shoes</h3>
-						<a href="#" class="button promo-shop-slide-button">Shop</a>
-					</div>
-				</li>
-				<li class="promo-shop-slide">
-					<img src="img/T-shirt-slide.jpg" width="180" height="150" alt="Grey T-Shirt" class="promo-shop-slide-img">
-					<div class="promo-shop-text-container">
-						<h3 class="promo-shop-slide-title">Branded Tshirts</h3>
-						<a href="#" class="button promo-shop-slide-button">Shop</a>
-					</div>
-				</li>
-				<li class="promo-shop-slide">
-					<img src="img/cargo-slide.jpg" width="180" height="150" alt="Cargo Promo" class="promo-shop-slide-img">
-					<div class="promo-shop-text-container">
-						<h3 class="promo-shop-slide-title">Branded Cargos</h3>
-						<a href="#" class="button promo-shop-slide-button">Shop</a>
-					</div>
-				</li>
-			</ul>
+		<div class="promo-shop-bg">
+			<div class="promo-shop-slider-container">
+				<h2 class="visually-hidden">Promo Shop</h2>
+				<ul class="promo-shop-slides">
+					<li class="promo-shop-slide">
+						<img src="img/shoes-slide.jpg" width="180" height="150" alt="Brown Shoes" class="promo-shop-slide-img">
+						<div class="promo-shop-text-container">
+							<h3 class="promo-shop-slide-title">Branded Shoes</h3>
+							<a href="#" class="button promo-shop-slide-button">Shop</a>
+						</div>
+					</li>
+					<li class="promo-shop-slide">
+						<img src="img/T-shirt-slide.jpg" width="180" height="150" alt="Grey T-Shirt" class="promo-shop-slide-img">
+						<div class="promo-shop-text-container">
+							<h3 class="promo-shop-slide-title">Branded Tshirts</h3>
+							<a href="#" class="button promo-shop-slide-button">Shop</a>
+						</div>
+					</li>
+					<li class="promo-shop-slide">
+						<img src="img/cargo-slide.jpg" width="180" height="150" alt="Cargo Promo" class="promo-shop-slide-img">
+						<div class="promo-shop-text-container">
+							<h3 class="promo-shop-slide-title">Branded Cargos</h3>
+							<a href="#" class="button promo-shop-slide-button">Shop</a>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div class="products">
 			<h2 class="products-main-title">Featured Products</h2>
